--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "hint.css": "^2.6.0",
     "nuxt": "^2.14.12",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1"
